# openapiv3-filter

./: .gitignore  Cargo.toml  LICENSE  LICENSE-THIRD-PARTY  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  parser.rs
src/filter/: mod.rs  openapi.rs
src/filter/content/: json_path_filter.rs  mod.rs  reference_collector.rs  reference_processor.rs
src/filter/openapi/: json_path_filter.rs  path.rs  reference_collector.rs  reference_processor.rs
src/filter/snapshots/: openapi_filter__filter__openapi__tests__it_filters_paths_with_method_name_match.snap  openapi_filter__filter__openapi__tests__it_filters_paths_with_partial_path_name_match.snap  openapi_filter__filter__openapi__tests__it_filters_paths_with_partial_path_tag_name_and_method_name_match.snap  openapi_filter__filter__openapi__tests__it_filters_petstore_with_full_path_an_api_key_auth.snap  (+3 more)
tests/: file_filtering_test.rs  file_filtering_test.rs.bk
tests/resources/: invalid-content  user-reference.json  user-reference.yaml
tests/snapshots/: file_filtering_test__it_filters_json_files.snap  file_filtering_test__it_filters_yaml_files.snap  file_filtering_test__it_handled_piped_input_without_explicit_pipe_marker_without_filtering_json.snap  file_filtering_test__it_handled_piped_input_without_explicit_pipe_marker_without_filtering_yaml.snap  file_filtering_test__it_handled_piped_input_without_explicit_pipe_marker_yaml.snap  file_filtering_test__it_reports_io_errors.snap  file_filtering_test__it_reports_parsing_errors.snap
